WP-6306: prevent title wrapping.

--- a/sass/conditionals/insights/related-to-idea-story.sass
+++ b/sass/conditionals/insights/related-to-idea-story.sass
@@ -67,6 +67,7 @@
     .group-wrapper-name,
     .field-name-title
       line-height: 0
+      padding-left: 52px
       a
         font-family: $font-demi
         display: inline-block
@@ -76,6 +77,7 @@
 
     // Rank, academic area for faculty, stanford degree for alumni, title for msx, organization for msx
     .group-wrapper-position,
+    .person-position,
     .field-name-field-stanford-degrees-single,
     .field-name-field-title-position-unlimited,
     .field-name-field-company-organization
